CSS overflow problem solved

--- a/frontend/src/components/profile/MainProfile.module.css
+++ b/frontend/src/components/profile/MainProfile.module.css
@@ -1,9 +1,3 @@
-.supracontainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .container {
     display: flex;
     flex-direction: column;
@@ -13,6 +7,7 @@
 
     width: 90vw;
     height: 80vh;
+    min-height: 500px;
 
     background: var(--color-black-transparent);
     box-shadow: 0px -4px 16px var(--color-black);
@@ -74,5 +69,5 @@
     width: 40%;
     height: 100%;
 
-    background: #835211bd TO DELETE;
+    /* background: #835211bd TO DELETE; */
 }
